Add support for Lightning Memory-Mapped Database LMDB as player store